kubernetProjects/simple-webapp/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: simple-webapp
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
    - port: 80
      targetPort: 80
